test/files/neg/t7886.check
t7886.scala:10: error: type mismatch;
 found   : Contra[A]
 required: Contra[Any]
    case Unravel(m, msg) => g(m)
                              ^
one error found
